--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
       name="keywords"
       content="developer, portfolio, web development, full stack, react, javascript"
     />
-    <meta name="author" content="Alex Chen" />
+    <meta name="author" content="Althaf" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <title>Alex Chen | Full Stack Developer</title>
+    <title>Althaf | Full Stack Developer</title>
   </head>
   <body>
     <div id="root"></div>
